tests/snapshots/integration__integration_tests__security__commit_message_with_directive_not_executed.snap
---
source: tests/integration_tests/security.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmppG2u4O/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
Branch   Working ±  Main ↕  State  Path         Remote ↕  Age            Commit    Message                                                            
[1m[35mmain   [0m                            [1m[35m./test-repo[0m                           [SHA][2m10 months ago[0m[2mFix bug __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked4[0m                
[2mfeature[0m                            [2m./feature  [0m                           [SHA][2m10 months ago[0m[2mFix bug __WORKTRUNK_EXEC__echo PWNED > /tmp/hacked4[0m                

[2mShowing 2 worktrees[0m

----- stderr -----
